# Convers8

./: .gitignore  README.md
backend/: example.py  example2.py  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
backend/src/: app.py  entry.py  gemini_service.py  gemini_service_local.py  parse_analyze.py  requirements.txt  sst_service.py  sst_service_local.py  tts_service.py  tts_service_local.py
frontend/: README.md  package-lock.json
frontend/src/components/: DashboardPreview.tsx  Features.tsx  Footer.tsx  Hero.tsx  TechStack.tsx  VoiceDemo.tsx
