[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "webtypy>=0.1.7",
    "requests",
    "elevenlabs",
    "fastapi",
    "PyPDF2",
    "python-multipart",
]

[dependency-groups]
dev = [
    "workers-py"
]
